src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Lash_Enrollment_Type__c</fullName>
        <label>Enrollment Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Enrollment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_IsBestTime__c</fullName>
        <formula>if(   ISBLANK(Lash_Zip_Code_Master__c)   ,true ,IF(( 
Lash_Zip_Code_Master__r.Now_in_Zip_Time_Zone__c &gt; Value(MID(Text(  Lash_Best_Start_Time_To_call__c ),1,2)+&apos;.&apos;+MID(Text(Lash_Best_Start_Time_To_call__c),4,2)) &amp;&amp; 
Lash_Zip_Code_Master__r.Now_in_Zip_Time_Zone__c &lt; Value(MID(Text( Lash_Best_End_Time_To_call__c ),1,2)+&apos;.&apos;+MID(Text(Lash_Best_End_Time_To_call__c ),4,2))),True,False))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsBestTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lash_IsInQueue__c</fullName>
        <formula>BEGINS(OwnerId, &apos;00G&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsInQueue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lash_Linked_Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lash_Missing_Information_Status__c</fullName>
        <label>Missing Information Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lash_Missing_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lash_No_of_Completed_Determine_Eligible__c</fullName>
        <label>No of Completed Determine Eligible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lash_Notes__c</fullName>
        <description>field to capture additional notes on the case.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lash_Now__c</fullName>
        <formula>Text(NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lash_Now_in_Contact_Time_Zone__c</fullName>
        <formula>DATETIMEVALUE(IF ( DATEVALUE(NOW()) &gt;=
DATE ( YEAR (DATEVALUE(NOW())),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(NOW())),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(NOW())),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(NOW()) &lt;
DATE ( YEAR (DATEVALUE(NOW())),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(NOW())),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(NOW())),11,1) - DATE (1900,1,7),7))
),
CASE(  Contact.Lash_Time_Zone__c    , &quot;Pacific&quot;, LEFT ( TEXT (NOW() - 7/24 ), 16), 
&quot;Mountain&quot;, LEFT ( TEXT (NOW()  - 6/24 ), 16),
&quot;Alaskan&quot;, LEFT ( TEXT (NOW() - 8/24 ), 16),
&quot;Hawaiian&quot;, LEFT ( TEXT (NOW() - 9/24 ), 16),
&quot;Eastern&quot;, LEFT ( TEXT (NOW() - 4/24 ), 16),
LEFT ( TEXT (NOW() - 5/24 ), 16)),
CASE( Contact.Lash_Time_Zone__c , &quot;Pacific&quot;, LEFT ( TEXT (NOW() - 8/24 ), 16), 
&quot;Mountain&quot;, LEFT ( TEXT (NOW()  - 7/24 ), 16),
&quot;Alaskan&quot;, LEFT ( TEXT (NOW() - 9/24 ), 16),
&quot;Hawaiian&quot;, LEFT ( TEXT (NOW() - 10/24 ), 16),
&quot;Eastern&quot;, LEFT ( TEXT (NOW() - 5/24 ), 16),
LEFT ( TEXT (NOW() - 6/24 ), 16))
)+&quot;:00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now in Contact Time Zone</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lash_Number_of_Completed_Send_Results__c</fullName>
        <label>Number of Completed Send Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lash_Payer_Await_Date__c</fullName>
        <label>Payer Await Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_Potential_Liability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_Review_Copay_Status__c</fullName>
        <label>Review Copay Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_SLA_Violation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_SLA__c</fullName>
        <description>field that shows when the case needs to be done by to fulfill SLAs.</description>
        <label>SLA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_Send_Results__c</fullName>
        <label>Send Results</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lash_Suppression_Date__c</fullName>
        <formula>IF( AND(NOT(ISNULL(Lash_Payer_Await_Date__c)),ISNULL(Lash_Threshold_Date__c)) ,   Lash_Payer_Await_Date__c , IF(AND(NOT(ISNULL(Lash_Threshold_Date__c)),ISNULL(Lash_Payer_Await_Date__c)) , Lash_Threshold_Date__c ,
IF(Lash_Payer_Await_Date__c &gt;  Lash_Threshold_Date__c , Lash_Payer_Await_Date__c , Lash_Threshold_Date__c)	
)
)</formula>
        <label>Suppression Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_Threshold_Date__c</fullName>
        <formula>Lash_Treatment_Date__c  - (  APS_Program_ID__r.LASH_Threshold_Days__c  + 1)</formula>
        <label>Threshold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_Today_End_Time__c</fullName>
        <formula>DATETIMEVALUE(  TEXT(YEAR(TODAY())) + &quot;-&quot;+TEXT( MONTH(TODAY())) +&quot;-&quot;+TEXT( DAY(TODAY())) +&quot; &quot;+  TEXT(   Lash_Best_End_Time_To_call__c )  +&quot;:00&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lash_Today_Start_Time__c</fullName>
        <formula>Text(DATETIMEVALUE(  TEXT(YEAR(TODAY())) + &quot;-&quot;+TEXT( MONTH(TODAY())) +&quot;-&quot;+TEXT( DAY(TODAY())) +&quot; &quot;+    Text( Lash_Best_Start_Time_To_call__c ) +&quot;:00&quot; )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lash_Total_No_of_Completed_Review_Copay__c</fullName>
        <label>Total No of Completed Review Copay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lash_Treatment_Date__c</fullName>
        <label>Treatment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lash_Zip_Code_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip Code Master</label>
        <referenceTo>APS_Zip_Code_Master__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_Type__c</fullName>
        <label>Payer Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Payer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Payer)</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>APS_Product__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.APS_Adherence_High_Risk,Case.APS_Adherence_Low_Risk</value>
        </filters>
        <label>My Team&apos;s Open Cases</label>
    </listViews>
    <listViews>
        <fullName>BV_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BV Queue</label>
        <queue>BV_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Copay_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LASH_Stat__c</columns>
        <filterScope>Queue</filterScope>
        <label>Copay Queue</label>
        <queue>Copay_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Copay_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Copay Queue</label>
        <queue>Copay_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_to_Case_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Email to Case</label>
        <queue>Email_to_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LASH_Data_Intake_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Data Intake</label>
        <queue>LASH_Data_Intake</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LASH_Stat__c</columns>
        <columns>Payer_Type__c</columns>
        <columns>Age__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Teams_Closed_Cases</fullName>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>APS_Product__c</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.APS_Adherence_High_Risk,Case.APS_Adherence_Low_Risk</value>
        </filters>
        <label>My Team&apos;s Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>PA_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>PA Queue</label>
        <queue>PA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>APS_Adherence_High_Risk</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record Type for Gevera Adherence High Risk</description>
        <label>Adherence High Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>APS_Adherence_Low_Risk</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record Type for Gevera Adherence Low Risk</description>
        <label>Adherence Low Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>APS_Adverse_Event</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record Type for Adverse Event</description>
        <label>Adverse Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>APS_Gevera_Onboarding</fullName>
        <active>false</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record Type For Gevera Onboarding</description>
        <label>Gevera Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adherence</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record type for Adherence</description>
        <label>Adherence</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_Benefits_Verification</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <label>Benefits Verification</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_Copay_Onboarding</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <label>Copay</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_Data_Intake_record</fullName>
        <active>true</active>
        <businessProcess>LASH_QDE</businessProcess>
        <label>Data Intake record</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_GI_Case</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record Type for General inquiry</description>
        <label>GI Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_Institutional_Order_Tracking</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record Type for LASH Institutional Order tracking Layout</description>
        <label>Institutional Order Tracking</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_OCR_Data</fullName>
        <active>true</active>
        <businessProcess>LASH_QDE</businessProcess>
        <label>OCR Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_Order_Tracking</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record Type for Order tracking Case Layout</description>
        <label>Fulfillment Order Tracking</label>
    </recordTypes>
    <recordTypes>
        <fullName>LASH_Triage_Case</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <description>Record Type for Triage Case</description>
        <label>Triage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onboarding</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <label>Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prior_Authorization</fullName>
        <active>true</active>
        <businessProcess>APS_Case Support Record Type</businessProcess>
        <label>Prior Authorization</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APS_Case_Cannot_be_opened_once_closed</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT($Profile.Name =&quot;System Administrator&quot;),
ISPICKVAL( PRIORVALUE(Status),&quot;Closed&quot;),
NOT(ISPICKVAL(Status, &quot;Closed&quot;) )
)</errorConditionFormula>
        <errorMessage>A Closed Case cannot be opened!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Category_is_Req_If_Type_Is_Serious</fullName>
        <active>true</active>
        <description>If Type = Serious, Categorization is Required</description>
        <errorConditionFormula>IF( ISPICKVAL(Type, &quot;Serious&quot;) ,  ISPICKVAL(APS_Category__c, &quot;&quot;) , false)</errorConditionFormula>
        <errorDisplayField>APS_Category__c</errorDisplayField>
        <errorMessage>Please select value for Category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_City_is_Req_If_Type_Is_Serious</fullName>
        <active>true</active>
        <description>If Type = Serious, City is required</description>
        <errorConditionFormula>IF( ISPICKVAL(Type, &quot;Serious&quot;), ISBLANK(APS_City__c), false )</errorConditionFormula>
        <errorDisplayField>APS_City__c</errorDisplayField>
        <errorMessage>Please enter value for City</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_HCP_Validation</fullName>
        <active>false</active>
        <description>Validation rule for HCP to make read Only. Allow user to enter a new value assuming no prior value has been entered, but once a value is set, 
it is locked in place.</description>
        <errorConditionFormula>AND($RecordType.Name  &lt;&gt;  &quot;General&quot;, ISCHANGED(APS_HCP__c))</errorConditionFormula>
        <errorMessage>The field can&apos;t be updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Product_Field_Should_Not_be_Empty</fullName>
        <active>false</active>
        <description>Product Field Should Not be Empty</description>
        <errorConditionFormula>ISBLANK(APS_Product__c)</errorConditionFormula>
        <errorMessage>Recommended to Add Product!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Product_Not_Editable</fullName>
        <active>true</active>
        <description>Program  can not be changed</description>
        <errorConditionFormula>AND(ISCHANGED( APS_Program_Product_Affiliation__c ),    NOT(ISBLANK(PRIORVALUE(APS_Program_Product_Affiliation__c))))</errorConditionFormula>
        <errorMessage>Product can not  be change.Please  select previous value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_ProgramName_Validation</fullName>
        <active>false</active>
        <description>Making &apos;Program Name&apos; field Read Only on Case Insert under Program Affiliation</description>
        <errorConditionFormula>NOT(ISBLANK( APS_Program_ID__c))</errorConditionFormula>
        <errorMessage>The Program Name field can&apos;t be Updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Program_Afltn_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( RecordType.DeveloperName &lt;&gt; &apos;General&apos;,APS_Program_Count__c = 0, $Profile.Name!=&apos;System Administrator&apos; )</errorConditionFormula>
        <errorMessage>Please create a Program for this Patient, before creating a Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_ReportrName_Req_If_RepType_Caregiver</fullName>
        <active>true</active>
        <description>Reporter Name is required If Reporter Type is selected as Caregiver.</description>
        <errorConditionFormula>IF(ISPICKVAL(APS_Reporter_Type__c,&quot;Caregiver&quot;), ISBLANK(APS_Reporter_Name__c), false)</errorConditionFormula>
        <errorDisplayField>APS_Reporter_Name__c</errorDisplayField>
        <errorMessage>Please enter value for Reporter Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_ReprtrPhone_Req_If_RepType_Caregiver</fullName>
        <active>true</active>
        <description>Reporter Phone is required If Reporter Type is selected as Caregiver.</description>
        <errorConditionFormula>IF(ISPICKVAL(APS_Reporter_Type__c,&quot;Caregiver&quot;), ISBLANK(APS_Reporter_Phone__c), false)</errorConditionFormula>
        <errorDisplayField>APS_Reporter_Phone__c</errorDisplayField>
        <errorMessage>Please enter value for Reporter Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_State_is_Req_If_Type_Is_Serious</fullName>
        <active>true</active>
        <description>If Type = Serious, State is required</description>
        <errorConditionFormula>IF(ISPICKVAL(Type, &quot;Serious&quot;),   ISPICKVAL(APS_State__c, &quot;&quot;), false)</errorConditionFormula>
        <errorDisplayField>APS_State__c</errorDisplayField>
        <errorMessage>Please select value for State</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_Treating_Providr_Req_If_Type_Serious</fullName>
        <active>true</active>
        <description>If Type = Serious, Treating Provider is required</description>
        <errorConditionFormula>IF( ISPICKVAL(Type, &quot;Serious&quot;),  ISBLANK(APS_Treating_Provider__c), false )</errorConditionFormula>
        <errorDisplayField>APS_Treating_Provider__c</errorDisplayField>
        <errorMessage>Please enter value for Treating Provider</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APS_WF_Main_Steps_Should_be_complete</fullName>
        <active>true</active>
        <description>5 status fields complete, then only should be able to Close the Task</description>
        <errorConditionFormula>OR(

IF(
(RecordTypeId = &apos;0127A0000004SLl&apos;) &amp;&amp;
NOT($Profile.Name =&quot;System Administrator&quot;) &amp;&amp;
ISPICKVAL(Status,&quot;Closed&quot;) &amp;&amp;
NOT(AND(
ISPICKVAL(APS_SRF_Intake_Status__c, &quot;Complete&quot;) ,
ISPICKVAL(APS_First_Day_On_Status__c  , &quot;Complete&quot;) ,
ISPICKVAL(APS_Insurance_Coverage_Status__c , &quot;Complete&quot;) ,
ISPICKVAL(APS_Medical_Assesment_Status__c  , &quot;Complete&quot;) ,
ISPICKVAL(APS_SP_Traige_Status__c, &quot;Complete&quot;)
)),true, false)

,

IF(
(RecordTypeId = &apos;0127A0000004SLl&apos;) &amp;&amp;
NOT($Profile.Name =&quot;System Administrator&quot;) &amp;&amp;
ISPICKVAL(Status,&quot;Closed&quot;) &amp;&amp;
NOT(AND(
ISPICKVAL(APS_SRF_Intake_Status__c, &quot;Complete&quot;) ,
ISPICKVAL(APS_First_Day_On_Status__c  , &quot;Complete&quot;) ,
ISPICKVAL(APS_Insurance_Coverage_Status__c , &quot;Complete&quot;) ,
ISPICKVAL(APS_Medical_Assesment_Status__c  , &quot;Complete&quot;) ,
ISPICKVAL(APS_SP_Traige_Status__c, &quot;Complete&quot;)
)),true, false)
,

IF(
OR(RecordTypeId = &apos;0127A0000004SLg&apos; , RecordTypeId = &apos;0127A0000004SLf&apos;) 
&amp;&amp;
NOT($Profile.Name =&quot;System Administrator&quot;)
&amp;&amp;
ISPICKVAL(Status,&quot;Closed&quot;) 
&amp;&amp;
NOT(APS_Case_Workflow_Steps_Completed__c=APS_Case_Workflow_Steps_Total__c),
true, false)
)</errorConditionFormula>
        <errorMessage>Case can be closed only if all the related tasks are closed!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Aps_Address_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( APS_RecordTypeName__c &lt;&gt; &quot;General&quot;, APS_Address_count__c = 0.00)</errorConditionFormula>
        <errorDisplayField>APS_Account__c</errorDisplayField>
        <errorMessage>Please create a Primary address for HCP, before creating a Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lash_PreventCaseEdit</fullName>
        <active>true</active>
        <errorConditionFormula>(IF(NOT( $Profile.Name  = &apos;System Administrator&apos;),IF($User.Id &lt;&gt; OwnerId, IF((ISCHANGED(OwnerId)|| ISCHANGED( LASH_Stat__c ) ), false , true ) , false),false))</errorConditionFormula>
        <errorMessage>You don&apos;t have permission to edit this case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payer_Await_Date_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>(Lash_Payer_Await_Date__c - TODAY()) &gt;   APS_Program_ID__r.LASH_Payer_Await_Interval__c</errorConditionFormula>
        <errorMessage>Payer Await Date should not exceed Payer Await Interval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Rule_for_non_editable_Product</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(APS_Product__c )</errorConditionFormula>
        <errorDisplayField>APS_Program_Product_Affiliation__c</errorDisplayField>
        <errorMessage>Product field should not be editable</errorMessage>
    </validationRules>
</CustomObject>